<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="blank"> </string>
    <string name="app_credit">An idea planner.\n   https://github.com/MRSa/GokigenOSDN_documents/blob/main/Applications/MeMoMa/README.md</string>
    <string name="app_name">MeMoMa</string>
    <string name="createnew">New</string>
    <string name="createnew_title">Discard confirmation</string>
    <string name="createnew_message">Discard all changes, OK?</string>
    <string name="deleteconfirm_title">Deleting confirmation</string>
    <string name="deleteconfirm_message">Delete OK?</string>
    <string name="cannot_delete_itself">The selected file is currently opened, cannot be deleted.</string>
    <string name="extend_menu">Object List&#8230;</string>
    <string name="rename_title">Save as&#8230;</string>
    <string name="load_data">Load&#8230;</string>
    <string name="save_data">Save&#8230;</string>
    <string name="align_data">Align&#8230;</string>
    <string name="capture_data">Save as Picture&#8230;</string>
    <string name="export_csv">Export as CSV&#8230;</string>
    <string name="import_csv">Append from CSV&#8230;</string>
    <string name="background_data">Select Background&#8230;</string>
    <string name="dialogtitle_selectcsv">Select a CSV to append</string>
    <string name="about_gokigen">About</string>
    <string name="shareContent">Share</string>
    <string name="dataTitle">Title</string>
    <string name="hintFileName">Input File Name</string>
    <string name="hintMessageLabel">Input Label</string>
    <string name="hintMessageInput">Input Detail</string>
    <string name="labelTextColorSample">ab</string>
    <string name="labelBorderColor">Color</string>
    <string name="labelBoldText">Bold</string>
    <string name="labelFillBorder">Fill </string>
    <string name="dataLoading">Loading&#8230;</string>
    <string name="dataSaving">Saving&#8230;</string>
    <string name="dataAligning">Aligning&#8230;</string>
    <string name="dataImporting">Importing&#8230;</string>
    <string name="info_default">(Gokigen)</string>
    <string name="defaultZoom">x1.0</string>
    <string name="preference_name">Preferences</string>
    <string name="parameterTitle">preferences</string>
    <string name="backgroundPreferences">Background Settings</string>
    <string name="userCheckbox">Custom data</string>
    <string name="useUserCheckboxTitle">use user check box</string>
    <string name="useUserCheckboxSummary"> </string>
    <string name="userCheckboxTitle">user check box title</string>
    <string name="userCheckboxSummary"> </string>
    <string name="userCheckboxString"> </string>
    <string name="backgroundViewTitle">background URI</string>
    <string name="backgroundViewSummary">Set background picture URI.</string>
    <string name="backgroundColorTitle">background color</string>
    <string name="backgroundColorSummary">Set background color.</string>
    <string name="operationMode_title">Operation Mode</string>
    <string name="operationMode_summary"> </string>
    <string name="drawStyle_title">Object Style</string>
    <string name="drawStyle_summary"> </string>
    <string name="lineStyle_title">Line Style</string>
    <string name="lineStyle_summary"> </string>
    <string name="objectPrintData_title">Object label</string>
    <string name="objectPrintData_summary"> </string>
    <string name="object_operation">Operations</string>
    <string name="object_delete">Delete</string>
    <string name="object_duplicate">Duplicate</string>
    <string name="object_bigger">Expand</string>
    <string name="object_smaller">Shrink</string>
    <string name="object_share">Share</string>
    <string name="object_bringtop">Bring to top</string>
    <string name="object_small_limit">Cannot shrink</string>
    <string name="object_bigger_limit">Cannot expand</string>
    <string name="confirmYes">OK</string>
    <string name="confirmNo">Cancel</string>
    <string name="confirmGo">Go</string>
    <string name="dummyData"> </string>
    <string name="no_name">(no name)</string>
    <string name="labelLineThickness">Line Thickness</string>
    <string name="labelLineShapeSelection">Line Shape</string>
    <string name="Title_SelectLineShape">Select a line style</string>
    <string name="undo_operation">Undo</string>
    <string name="permission_not_granted">Permissions not granted by the user.</string>
    <string name="permission_capture_error">Error Occurs at the request permission sequence.</string>
    <string name="import_xml">Import from XML&#8230;</string>
    <string name="export_xml">Export to XML&#8230;</string>
    <string name="delete_content">Delete Content&#8230;</string>
    <string name="none_object">Object is empty, not saved.</string>
    <string name="import_xml_information">Please select again the data imported from the XML file on the main screen.</string>
    <string name="exported_picture_not_shared">The picture is exported, but it cannot share it.</string>
    <string name="exported_data_not_shared">The file is exported, but it cannot share it.</string>
    <string name="intent_call_error">The file picker call failed.</string>
    <string name="create_object">Create Object</string>
    <string name="delete_object">Delete Object</string>
    <string name="save">Save objects</string>
    <string name="set_line_style">Set line style</string>
    <string name="show_another_view">Show another view</string>
</resources>
